--- a/aula01html/index.html
+++ b/aula01html/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">   
-    <title>Document</title>
+    <title>Acquatec</title>
 </head>
 <body>
-    <h2 class="texto-cor">Texto roxo</h2>
+   <header>
+        <div class="container">
+            <div class="titulo">
+                <h1>Acquatec</h1>
+            </div>
+            <div class="navegacao">
+                <ul>
+                    <li>Nossos serviços</li>
+                    <li>Sobre nós</li>
+                    <li>Login</li>
+                </ul>
+            </div>
+        </div>
+   </header>
 </body>
 </html>
